# llm-shim

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
src/llm_shim/: __init__.py
src/llm_shim/api/: __init__.py  chat.py  embeddings.py  models.py
src/llm_shim/api/schemas/: openai.py
src/llm_shim/core/: __init__.py  config.py  utils.py
src/llm_shim/services/: chat.py  embeddings.py  models.py
tests/: test_app.py
tests/api/: test_chat.py  test_embeddings.py  test_models.py  test_openai_schemas.py
tests/core/: test_config.py
tests/services/: test_chat.py  test_embeddings.py
