[project]
name = "llm-shim"
version = "0.1.0"
description = "A minimal OpenAI-compatible API shim for LLMs."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"

authors = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]
maintainers = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]

keywords = ["llm", "openai", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.2",
    "instructor[anthropic,google-genai,mistralai,vertexai,xai]>=1.14.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["B", "D", "DOC", "E", "F", "I", "RUF", "SIM", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src"
asyncio_mode = "auto"

[tool.uv.build-backend]
module-name = "llm_shim"
namespace = true

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]
